feat: modification du budget
Ajout de la route POST /communities/{id}/budget permettant de modifier les budgets.
Le corps de la requête est composé d'un objet, avec les clé représentant les identifiants des thèmes à modifier et les valeurs correspondants au nouveau montant.

- `0`: le budget général du groupe
- `-1`: les frais fixes du groupe.

Connexion de l'api au frontend
